--- a/WebformCalender/Web.config
+++ b/WebformCalender/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="DBCS" connectionString="Data Source=SUYPC211;Initial Catalog=EmployeeDb;User ID=sa;Password=Suyati123" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <pages>
       <controls>
